--- a/styles/index.css
+++ b/styles/index.css
@@ -21,6 +21,7 @@ a {
   font-family: "Metropolis";
   text-align: justify;
   line-height: 1.8;
+  font-size: 1.1em;
 }
 
 .bg-video {
@@ -31,6 +32,10 @@ a {
   z-index: -100;
   background: url(../img/Camada\ 30.png) no-repeat center;
   background-size: cover;
+}
+
+.loguinho {
+  text-align: center;
 }
 
 .logo {
@@ -87,7 +92,9 @@ a {
 .sombra {
   position: absolute;
   z-index: -1;
-  width: 70%;
+  background-color: rgba(0, 0, 0, 0.229);
+  height: 93.5%;
+  width: 100%;
 }
 
 .about {
@@ -274,6 +281,7 @@ footer {
 
   .menu {
     width: 6%;
+    margin-top: -27%;
     padding: 6%;
   }
 
@@ -284,6 +292,10 @@ footer {
 
   p {
     font-size: 0.9em;
+  }
+
+  .sombra {
+    height: 21%;
   }
 
   .menu-list {
@@ -396,6 +408,7 @@ footer {
 
   .menu {
     width: 3vw;
+    margin-top: -21%;
     padding: 5%;
   }
 
@@ -419,7 +432,7 @@ footer {
   .menu-list p {
     padding: 1%;
     padding-left: 6%;
-    margin-block: 2%;
+    margin-block: 1.35%;
     border: 1px solid #ffffff00;
   }
 
