--- a/styles/pessoa.css
+++ b/styles/pessoa.css
@@ -28,3 +28,33 @@
     margin-right: 10%;
     text-align: justify;
 }
+
+@media (max-width: 900px) {
+    .container {
+        flex-direction: column-reverse;
+    }
+
+    .container div {
+        width: 100%;
+        margin: auto;
+    }
+
+    .container div p {
+        width: 100%;
+        margin-right: 0%;
+    }
+
+    .container img {
+        width: 60%;
+        margin: auto;
+    }
+
+    .container h1 {
+        font-size: 1.3em;
+        margin-bottom: 0;
+    }
+
+    .container h3 {
+        margin-top: 0;
+    }
+}
