--- a/styles/index.css
+++ b/styles/index.css
@@ -167,15 +167,16 @@ a {
 
 .partners {
   border: 1px solid #ca9811;
-  margin: 10% 5%;
+  margin: 5%;
 }
 
 .people {
   width: 90%;
   margin: auto;
   padding-top: 3%;
-  margin-top: -10%;
-  padding-bottom: 8%;
+  /* margin-top: -10%; */
+  /* padding-bottom: 8%; */
+  padding-bottom: 3%;
 }
 
 .foto {
@@ -297,6 +298,36 @@ footer {
 
 .icon a img {
   width: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.container h1 {
+  text-align: start;
+}
+
+.container img,
+.container div {
+  width: 40%;
+}
+
+.container div p {
+  padding-block: 2%;
+}
+
+.redes-contato-unico {
+  margin-top: 2%;
+  display: flex;
+  padding-left: 19%;
+}
+
+.redes-contato-unico a img {
+  width: 70%;
 }
 
 @media (max-width: 900px) {
@@ -483,6 +514,32 @@ footer {
     margin-bottom: 5%;
   }
 
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .container h1 {
+    text-align: start;
+  }
+
+  .container img,
+  .container div {
+    width: 100%;
+  }
+  
+  .redes-contato-unico {
+    margin-top: 2%;
+    display: flex;
+    padding-left: 25%;
+  }
+  
+  .redes-contato-unico a img {
+    width: 70%;
+  }
 }
 
 @media (min-width: 950px) {
