--- a/styles/index.css
+++ b/styles/index.css
@@ -98,7 +98,7 @@ a {
 .sombra {
   position: absolute;
   z-index: -1;
-  /* background-color: rgba(0, 0, 0, 0.229); */
+  background-color: rgba(0, 0, 0, 0.229);
   height: 93.5%;
   width: 100%;
 }
